# hnet

./: .gitignore  README.md  comparison.py  config_hnet.py  download.py  fineweb.py  generate.py  hnet_simple.py  hnet_trainable.py  infer.py  pyproject.toml  train.py  tutorial.ipynb
configs/: hnet_1stage_small.json  hnet_2stage_small.json
hnet/modules/: block.py  dc.py  isotropic.py  mha.py  mlp.py
lm/: block.py  byte_tokenizer.py  causal_mha.py  chunk_layer.py  dechunk_layer.py  dechunk_state.py  flash_causal_cross_attention.py  flash_causal_self_attention.py  hnet.py  hnet_config.py  hnet_for_causal_lm.py  isotropic.py  isotropic_inference_params.py  mamba_2_wrapper.py  rotary_embedding.py  routing_module.py  routing_module_output.py  routing_module_state.py  ste.py  swiglu.py
