[project]
name = "hnet"
version = "0.0.1"
description = "H-Net"
authors = [
    { name = "Sukjun Hwang", email = "sukjunh@cs.cmu.edu" },
    { name = "Brandon Wang", email = "brandon.wang@cartesia.ai"},
    { name = "Albert Gu", email = "agu@cs.cmu.edu" },
    { name = "main", email = "a@b.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch",
    "triton",
    "einops",
    "optree",
    "regex",
    "omegaconf",
    "coverage>=7.9.2",
    "codecov-cli>=11.0.3",
    "lovely-tensors>=0.1.18",
    "typer>=0.16.0",
    "termcolor>=3.1.0",
    "ninja",
    "psutil",
    "pdbpp>=0.11.6",
    "pyarrow>=20.0.0",
    "wandb>=0.21.0",
    "py-spy>=0.4.0",
]
[project.urls]
Repository = "https://github.com/main-horse/hnet"

[tool.setuptools.packages.find]
where = ["."]
include = ["hnet*"]
exclude = ["tests*"]

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
build = ["mamba-ssm==2.2.5", "flash-attn==2.8.1", "causal-conv1d==1.5.2"]

[tool.uv]
no-build-isolation-package = ["flash-attn", "mamba-ssm", "causal-conv1d"]

[[tool.uv.index]]
name = "stable"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "stable" }]
triton = [{ index = "stable" }]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.8.1"
requires-dist = ["torch", "einops"]
